# remote-server

./: .gitignore  .pre-commit-config.yaml  .projectile  Cargo.toml  LICENSE  README.md  README.org
emacs-remote/: README.org  client.py
emacs-remote/client/: daemon.py
emacs_remote/: client.py  server.py  setup.py
emacs_remote/client/: daemon.py
emacs_remote/emacs_remote/client/: daemon.py  interface.py  main.py  utils.py
emacs_remote/emacs_remote/messages/: __init__.py  file_request.py  message.py  port_request.py  registry.py  shell_request.py  startup.py  terminate_request.py
emacs_remote/emacs_remote/server/: daemon.py  main.py
emacs_remote/emacs_remote/utils/: __init__.py  atomic.py  logging.py  stcp.py  stcp_socket.py
emacs_remote/experiment/: udp_experiment.py
emacs_remote/scripts/: experiment.py  port.sh  server.sh  server_experiment.py  test.sh
prototype/: Cargo.toml  main.rs
remote_server/: setup.py
remote_server/remote_server/: local_client.py  remote_server.py  request.py  requests.py  workspace.py
remote_server/remote_server/client/: daemon.py  main.py
remote_server/remote_server/server/: daemon.py
remote_server/remote_server/utils/: __init__.py  logging.py  size.py  stcp.py
remote_server/scripts/: client_experiment.py  server.sh
scripts/: client.sh  run.sh  server.sh
src/: README.org  handle.rs  info.rs  lib.rs  local_client.rs  local_daemon.rs  main.rs  remote_client.rs  remote_daemon.rs  server.rs  structs.rs  utils.rs
src/client/: daemon.rs  main.rs
src/handlers/: index.rs
src/messages/: index.rs  ls.rs  messagetype.rs
src/requests/: dispatch.rs  exit_request.rs  init_request.rs  mod.rs  msg_request.rs  payload.rs  request.rs  shell_request.rs  types.rs
src/server/: app.rs  daemon.rs  main.rs
src/stcp/: client.rs  lib.rs  messages.rs
src/stcp/messages/: index.rs  messagetype.rs
src/stcp/structs/: client.rs  server.rs
src/stcp/utils/: ssh.rs  stcp.rs  stream.rs
src/structs/: client.rs  server.rs
src/utils/: drop_guard.rs  event.rs  hash.rs  mod.rs  scp.rs  shutil.rs  ssh.rs  stcp.rs  workspace.rs
tests/: main.rs
