[package]
name = "emacs-remote"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
rmp = "0.8.10"
rmp-serde = "0.15.5"
rmpv = { version = "0.4.7", features = ["with-serde"] }
num_enum = "0.5.4"
dirs = "3.0.2"
flate2 = "1.0.22"
ssh2 = "0.9.3"
ssh_config = "0.1.0"
whoami = "1.1.5"

[[bin]]
name = "emacs-remote-client-interface"
path = "src/client/interface.rs"

[[bin]]
name = "emacs-remote-client-daemon"
path = "src/client/daemon.rs"

[[bin]]
name = "emacs-remote-server-daemon"
path = "src/server/daemon.rs"
