[package]
name = "emacs-remote"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0.0"
log = "0.4.16"
log4rs = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
# serde_json = "1.0.67"
# rmp = "0.8.10"
rmp-serde = "1.1.0"
# rmpv = { version = "0.4.7", features = ["with-serde"] }
# num_enum = "0.5.4"
# flate2 = "1.0.22"
# ssh2 = "0.9.3"
# ssh_config = "0.1.0"
# whoami = "1.1.5"


[[bin]]
name = "emacs-local-client"
path = "src/local_client.rs"

[[bin]]
name = "emacs-local-daemon"
path = "src/local_daemon.rs"

[[bin]]
name = "emacs-remote-client"
path = "src/remote_client.rs"

[[bin]]
name = "emacs-remote-daemon"
path = "src/remote_daemon.rs"
